src/mmd_token_scanner.re
/**

	libMultiMarkdown7 -- Lightweight markup processor to produce HTML, LaTeX, and more.

	@file mmd_token_scanner.c

	@brief 


	@author	Fletcher T. Penney
	@bug	

**/

/*

	MIT License
	
	Copyright (c) 2024-2026 Fletcher T. Penney
	
	Permission is hereby granted, free of charge, to any person obtaining a copy
	of this software and associated documentation files (the "Software"), to deal
	in the Software without restriction, including without limitation the rights
	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
	copies of the Software, and to permit persons to whom the Software is
	furnished to do so, subject to the following conditions:
	
	The above copyright notice and this permission notice shall be included in all
	copies or substantial portions of the Software.
	
	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
	SOFTWARE.

*/


#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "libMultiMarkdown7.h"

#include "char.h"
#include "read_ctx.h"
#include "mmd_node.h"
#include "mmd_scanner.h"
#include "mmd_token_scanner.h"
#include "mmd_span_parser.h"
#include "read_ctx.h"
#include "mmd_utilities.h"

#pragma GCC diagnostic push
#pragma GCC diagnostic ignored "-Wunused-variable"
#pragma GCC diagnostic ignored "-Wunused-but-set-variable"

#ifndef __has_warning
#define __has_warning(x) 0
#endif

#if !__has_warning("-Wmaybe-uninitialized")
	#pragma GCC diagnostic ignored "-Wmaybe-uninitialized"
#endif

#pragma GCC diagnostic ignored "-Wunused-parameter"

#define ret s->c_start = t1; return

/// Scan text for MultiMarkdown tokens
int mmd_token_scan(Scanner * s, uint32_t options) {
	const char *t1;
	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

	scan:
	if (s->cur >= s->stop) {
		s->c_start = s->text;
		s->start = s->cur;
		return TOKEN_EOF;
	}

	s->start = s->cur;

	/*!re2c
		re2c:yyfill:enable = 0;
		re2c:yyfill:check = 1;
		re2c:tags = 1;

		eol								= ( '\n' | '\r' '\n'?);
		eof								= '\x00';
		nl_eof							= eol | eof;
		s								= [ \t\240]*;

		name							= [A-Za-z_:] [A-Za-z0-9_.:-]*;
		quoted_d						= '"' [^"\n\r\x00]* '"';
		quoted_s						= "'" [^'\n\r\x00]* "'";
		quoted_p						= "(" [^)\n\r\x00]* ")";
		unquoted						= [.A-Za-z0-9\-]+;
		bool_attr						= 'autoplay' | 'controls' | 'loop' | 'muted' | 'allowfullscreen';
		value							= (quoted_d | quoted_s | unquoted);
		attr							= s* name '=' s* value;
		attributes						= ((s* bool_attr) | attr)+;
		tag_name						= [A-Za-z] [A-Za-z0-9\-]*;
		tag_start						= '<' tag_name attributes? s* '>';
		tag_empty						= '<' tag_name attributes? s* '/>';
		tag_end							= '</' tag_name s* '>';
		// We limit comments to exclude '>' character to minimize backtracking
		comment_old						= [^>\-\x00] [^>\x00]*;
		comment							= eol? [^>\-\x00\r\n] [^>\x00\r\n]* (eol [^>\x00\r\n]+)* eol?;

		tag_comment						= '<!--' comment '-->';
		html 							= tag_start | tag_empty | tag_end | tag_comment;

		@t1 [ ]{2,} eol					{ ret TOKEN_LINEBREAK; }
		@t1 [ ]* [\\] eol				{ ret TOKEN_LINEBREAK; }


		@t1 ([ ]? | [\t]* ) eol			{ ret TOKEN_NL; }
		@t1 [ \t]* eof					{ ret TOKEN_EOF; }

		@t1 "&amp;"						{ ret TOKEN_AMPERSAND_LONG; }
		@t1 "&#" [Xx] [0-9a-fA-f]+ [;]	{ ret TOKEN_HTML_ENTITY; }
		@t1 "&#" [0-9]+ [;]				{ ret TOKEN_HTML_ENTITY; }
		@t1 "&" [A-Za-z0-9]+ [;]		{ ret TOKEN_HTML_ENTITY; }
		@t1 [&]							{ ret TOKEN_AMPERSAND; }

		@t1 [#]+						{ ret TOKEN_HASH; }

		@t1 [*]							{ ret TOKEN_STAR; }
		@t1 [+]							{ ret TOKEN_PLUS; }
		@t1 [-]							{ ret TOKEN_MINUS; }

		@t1 [0-9]+ '.' / ([ \t\n\r])	{ ret TEXT_NUMBER_POSS_LIST; }

		@t1 [_]							{ ret TOKEN_UL; }
		@t1 [:]							{ ret TOKEN_COLON; }

		@t1 [`]+						{ ret TOKEN_BACKTICK; }
		@t1 [']							{ ret TOKEN_QUOTE_SINGLE; }
		@t1 ["]							{ ret TOKEN_QUOTE_DOUBLE; }
		@t1 "''"						{ ret TOKEN_QUOTE_DOUBLE_ALT; }
		@t1 [.]{3}						{ ret TOKEN_ELLIPSIS; }
		@t1 ". . ."						{ ret TOKEN_ELLIPSIS; }
		@t1 [\-]{3}						{ ret TOKEN_DASH_M; }
		@t1 [\-]{2}						{ ret TOKEN_DASH_N; }

		@t1 [0-9] [\-] / [0-9]			{ ret TOKEN_DASH_N_RANGE; }

		@t1 [(]							{ ret TOKEN_PAREN_LEFT; }
		@t1 [)]							{ ret TOKEN_PAREN_RIGHT; }
		@t1 '!['						{ ret TOKEN_BRACKET_LEFT; }
		@t1 [[]							{ ret TOKEN_BRACKET_LEFT; }
		@t1 [\]]						{ ret TOKEN_BRACKET_RIGHT; }
		@t1 [<]							{ ret TOKEN_ANGLE_LEFT; }
		@t1 [>]							{ ret TOKEN_ANGLE_RIGHT; }
		@t1 '[' s ']'					{ ret TOKEN_PAIR_BRACKET_EMPTY; }
		@t1 '[' s 'not cited' s ']'		{ ret TOKEN_PAIR_BRACKET_NOT_CITED; }
		@t1 '[' s 'notcited' s ']'		{ ret TOKEN_PAIR_BRACKET_NOT_CITED; }

		@t1 [\\][.!?,;:"'`~(){}[\]#$%+\-=<>&@\\/^*_|]		{ ret TOKEN_ESCAPED_CHARACTER; }
		@t1 [\\][ ]						{ ret TOKEN_NBSP; }
		@t1 '|'+						{ ret TOKEN_PIPE; }

		@t1 "{++"						{ ret TOKEN_CM_ADD_OPEN; }
		@t1 "++}"						{ ret TOKEN_CM_ADD_CLOSE; }
		@t1 "{--"						{ ret TOKEN_CM_DEL_OPEN; }
		@t1 "--}"						{ ret TOKEN_CM_DEL_CLOSE; }
		@t1 "{~~"						{ ret TOKEN_CM_SUB_OPEN; }
		@t1 "~>"						{ ret TOKEN_CM_SUB_DIV; }
		@t1 "~~}"						{ ret TOKEN_CM_SUB_CLOSE; }
		@t1 "{>>"						{ ret TOKEN_CM_COM_OPEN; }
		@t1 "<<}"						{ ret TOKEN_CM_COM_CLOSE; }
		@t1 "{=="						{ ret TOKEN_CM_HI_OPEN; }
		@t1 "==}"						{ ret TOKEN_CM_HI_CLOSE; }

		@t1 "{"							{ ret TOKEN_BRACE_LEFT; }
		@t1 "}"							{ ret TOKEN_BRACE_RIGHT; }

		@t1 "^"							{ ret (options & MMD_OPTION_COMPATIBILITY) ? TOKEN_TEXT : TOKEN_SUPERSCRIPT; }
		@t1 "~"							{ ret (options & MMD_OPTION_COMPATIBILITY) ? TOKEN_TEXT : TOKEN_SUBSCRIPT; }

		@t1 "\\\\("						{ ret TOKEN_MATH_PAREN_OPEN; }
		@t1 "\\\\)"						{ ret TOKEN_MATH_PAREN_CLOSE; }
		@t1 "\\\\["						{ ret TOKEN_MATH_BRACKET_OPEN; }
		@t1 "\\\\]"						{ ret TOKEN_MATH_BRACKET_CLOSE; }
		@t1 "$"							{ ret TOKEN_MATH_DOLLAR_SINGLE; }
		@t1 "$$"						{ ret TOKEN_MATH_DOLLAR_DOUBLE; }

		@t1 '\xef\xbf\xbc'				{ ret OBJECT_REPLACEMENT_CHARACTER; }

		@t1 [ ][ \t]+					{ ret TOKEN_TEXT_WHITESPACE; }
		@t1 [\t][ \t]*					{ ret TOKEN_TEXT_WHITESPACE; }

		// These characters are not used for MultiMarkdown per se, but will often
		// need to be escaped in various output formats
		@t1 [\\%]						{ ret TOKEN_SPECIAL_CHARACTER; }

		// Anything else - skip until we find another token
		// Skipped characters will be converted to TOKEN_TEXT when retrieved
		*								{ goto scan; }
	*/
}


/// Scan text for CriticMarkup tokens
int criticmarkup_token_scan(Scanner * s) {
	const char *t1;
	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

	scan:
	s->start = s->cur;

	/*!re2c
		re2c:yyfill:enable = 0;
		re2c:tags = 1;

		// eof				= '\x00';
		@t1 eof							{ ret TOKEN_EOF; }

		@t1 "{++"						{ ret TOKEN_CM_ADD_OPEN; }
		@t1 "++}"						{ ret TOKEN_CM_ADD_CLOSE; }
		@t1 "{--"						{ ret TOKEN_CM_DEL_OPEN; }
		@t1 "--}"						{ ret TOKEN_CM_DEL_CLOSE; }
		@t1 "{~~"						{ ret TOKEN_CM_SUB_OPEN; }
		@t1 "~>"						{ ret TOKEN_CM_SUB_DIV; }
		@t1 "~~}"						{ ret TOKEN_CM_SUB_CLOSE; }
		@t1 "{>>"						{ ret TOKEN_CM_COM_OPEN; }
		@t1 "<<}"						{ ret TOKEN_CM_COM_CLOSE; }
		@t1 "{=="						{ ret TOKEN_CM_HI_OPEN; }
		@t1 "==}"						{ ret TOKEN_CM_HI_CLOSE; }

		*								{ goto scan; }

	*/
}


/*!re2c

	re2c:define:YYCTYPE = "unsigned char";
	re2c:define:YYCURSOR = text;
	re2c:define:YYMARKER = marker;
	re2c:define:YYCTXMARKER = marker;
	re2c:yyfill:enable = 0;

	label		= '[' [^[\]\x00]* ']';
*/


abbr_def * scan_ref_abbr(const char * text, size_t len) {
	const char * marker = NULL;
	const char * start = text;
	const char *t1, *t2, *t3, *t4, *t5;

	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

	abbr_def * a = NULL;

/*!re2c
	re2c:tags = 1;

	// TODO: Need to include additional lines (if any) within block
	s @t1 label @t2 s':' s @t3 [^\t\n\r\x00]+ @t4 {
		a = calloc(1, sizeof(abbr_def));

		a->key = my_strndup(t1 + 1, t2 - t1 - 2);

		while(char_is_whitespace(a->key[strlen(a->key) - 1])) {
			a->key[strlen(a->key) - 1] = '\0';
		}

		a->expansion = my_strndup(t3, t4 - t3);
		a->expansion_len = t4 - t3;

		return a;
	}

	* {return NULL; }
*/		
}


/// Return linked list of attributes
attr * scan_link_attributes(const char * text, size_t len, size_t * scanned) {
	const char * marker = NULL;
	const char * start = text;
	const char *t1, *t2, *t3, *t4;

	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

	attr * head = NULL;
	attr * last = NULL;

next:

	if (text < start + len) {
/*!re2c
	re2c:tags = 1;

//		attr							= s* name '=' s* value;

	s @t1 name @t2 '=' s @t3 value @t4 s {
		attr * a = malloc(sizeof(attr));
		a->key = my_strndup(t1, t2 - t1);

		switch(*t3) {
			case '"':
			case '\'':
				t3++;
				t4--;
				break;
		}

		a->value = my_strndup(t3, t4 - t3);
		a->next = NULL;

		if (last) {
			last->next = a;
			last = a;
		} else {
			head = a;
			last = a;
		}

		if (scanned) {
			*scanned = text - start;
		}

		goto next;
	}

	')' { return head; }
	* { goto next; }

*/
	}

	return head;
}


link_def * scan_ref_link(const char * text, size_t len) {
	const char * marker = NULL;
	const char * start = text;
	const char *t1, *t2, *t3, *t4, *t5, *t6, *t7;

	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

	link_def * l = NULL;

/*!re2c
	re2c:tags = 1;

	// TODO: Need to include additional lines (if any) within block
	s @t1 label @t2 s':' s '<'? @t3 [^ >\t\n\r\x00]+ @t4 '>'? s eol? s ('"' @t5 [^"\x00]*  @t6 '"')? s @t7 {
	// s @t1 label @t2 s':' s '<'? @t3 [^ >\t\n\r\x00]+ @t4 '>'? s eol? s (@t5 (quoted_s | quoted_d | quoted_p) @t6)? s @t7 {
		l = calloc(1, sizeof(link_def));

		l->key = md_id_from_text(t1, t2 - t1, true);

		l->url_len = t4 - t3;
		l->url = my_strndup(t3, l->url_len);

		if (t5 && t6) {
			l->title_len = t6 - t5;
			l->title = my_strndup(t5, l->title_len);
		}

		if (t7 < start + len) {
			l->attributes = scan_link_attributes(t7, len - (t7 - start), NULL);
		}


		return l;
	}

	* {return NULL; }
*/		
}


endnote_def * scan_ref_endnote(const char * text, size_t len) {
	const char * marker = NULL;
	const char * start = text;
	const char *t1, *t2, *t3, *t4, *t5;

	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

	endnote_def * e = NULL;

/*!re2c
	re2c:tags = 1;

	// TODO: Need to include additional lines (if any) within block
	s @t1 label @t2 s':' s @t3 [^\t\n\r\x00]+ @t4 {
		e = calloc(1, sizeof(endnote_def));

		// Don't include leading `[` or trailing `]`
		e->key = md_id_from_text(t1 + 1, t2 - t1 - 2, true);

		return e;
	}

	* {return NULL; }
*/		
}


int scan_table_alignment(const char * text) {
	const char * marker = NULL;
	const char * start = text;

/*!re2c
	align				= [\-=]+;
	align_left			= s ':' align s ('|' | nl_eof);
	align_right			= s align ':' s ('|' | nl_eof);
	align_center		= s ':' align ':' s ('|' | nl_eof);
	align_wrap 			= s align '+' s ('|' | nl_eof);
	align_wrap_left		= s ':' align '+' s ('|' | nl_eof);
	align_wrap_right	= s align ':' '+' s ('|' | nl_eof);
	align_wrap_center	= s ':' align ':' '+' s ('|' | nl_eof);


	align_wrap			{ return ALIGN_WRAP; }
	align_left			{ return ALIGN_LEFT; }
	align_right			{ return ALIGN_RIGHT; }
	align_center		{ return ALIGN_CENTER; }

	align_wrap_left		{ return ALIGN_WRAP | ALIGN_LEFT; }
	align_wrap_right	{ return ALIGN_WRAP | ALIGN_RIGHT; }
	align_wrap_center	{ return ALIGN_WRAP | ALIGN_CENTER; }

	*					{ return 0; }
*/
}


size_t scan_html(const char * text) {
	const char * marker = NULL;
	const char * start = text;

/*!re2c
	html		{ return (size_t)(text - start); }
	*			{ return 0; }
*/
}

size_t scan_url(const char * text) {
	const char * marker = NULL;
	const char * start = text;

/*!re2c
	url			= [A-Za-z\-]+ '://' [^ \240\t\n\r\x00>]+;

	url 		{ return (size_t)(text - start); }
	*			{ return 0; }
*/
}


size_t scan_email(const char * text) {
	const char * marker = NULL;
	const char * start = text;

/*!re2c
	email		= 'mailto:'? [-A-Za-z0-9+_./!%~$]+ '@' [^ \240\t\n\r\x00>]+;

	email 		{ return (size_t)(text - start); }
	*			{ return 0; }
*/
}


void clean_meta_value(meta * m) {
	char * read = m->value;
	char * stop = m->value + m->value_len;
	char * write = m->value;

	while (read < stop) {
		// Strip out redundant char_is_whitespace
		switch(*read) {
			case ' ':
			case '\t':
			case '\n':
			case '\r':
				*write = ' ';

				while ((read < stop - 1) && char_is_whitespace_or_line_ending(read[1])) {
					read++;
				}

				break;

			case '\\':
				if (char_is_whitespace_or_line_ending(read[1])) {
					*write = '\n';
					read++;

					while ((read < stop - 1) && char_is_whitespace_or_line_ending(read[1])) {
						read++;
					}
				} else {
					*write = *read;
				}

				break;

			default:
				*write = *read;
				break;
		}

		read++;
		write++;
	}

	write--;

	if (write >= m->value && *write == ' ') {
		*write = '\0';
	} else {
		write++;
	}

	m->value_len = write - m->value;
}


size_t scan_metadata(const char * text, size_t len, meta ** m) {
	const char * marker = NULL;
	const char * start = text;
	const char * stop = text + len;
	const char *t1, *t2, *t3, *t4;

	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

/*!re2c
	meta_key		= [A-Za-z0-9] [A-Za-z0-9_ \240\t\-.]*;

	first_line		= [^\x00\n\r]*;
//	continuation	= eol s [^ \t\n\r\x00] (([^:\n\r\x00]* url [^\x00\n\r]*) | ([^:\n\r\x00]* email [^\x00\n\r]*) | [^:\x00\n\r]+);
	continuation	= eol (([ \t\240] s [^ \t\n\r\x00]) | ([^:\n\r\x00]* url [^\x00\n\r]*) | ([^:\n\r\x00]* email [^\x00\n\r]*) | [^:\x00\n\r]+);
	meta_value		= first_line (continuation)*; 

	s @t1 meta_key @t2 ':' s @t3 meta_value @t4 nl_eof {
		*m = calloc(1, sizeof(meta));

		(*m)->key = html_id_from_text(t1, t2 - t1, true);

		if (t4 > stop) {
			t4 = stop;
		}

		(*m)->value = my_strndup(t3, t4 - t3);
		(*m)->value_len = t4 - t3;
		(*m)->value_start = t3 - start;

		clean_meta_value(*m);

		return (size_t)(text - start);
	}

	*	{ return 0; }
*/
}


char * copy_fence_language_specificer(const char * text) {
	char * result = NULL;
	size_t len = 0;

	while (*text != '`' && *text != '~') {
		text++;
	}

	while (*text == '`' || *text == '~') {
		text++;
	}

	while (char_is_whitespace(*text)) {
		text++;
	}

	while (!char_is_whitespace_or_line_ending(text[len])) {
		len++;
	}

	if (len) {
		result = my_strndup(text, len);
	}

	return result;
}


void scan_toc_range(const char * text, int * min, int * max) {
	const char * marker = NULL;
	const char * start = text;
	const char *t1, *t2;

	// Autogenerated tag variables used by the lexer to track tag values.
	/*!stags:re2c format = 'const char *@@;\n'; */

/*!re2c
	re2c:tags = 1;

	"{{TOC}}" 								{ *min = 0; *max = 6; return; }
	"{{TOC:" @t1 [0-9] "}}" 				{ *min = *t1 - '0'; *max = *t1 - '0'; return; }
	"{{TOC:" @t1 [0-9] "-" @t2 [0-9] "}}" 	{ *min = *t1 - '0'; *max = *t2 - '0'; return; }
	*										{ return; }
*/
}

#pragma GCC diagnostic pop
