src/mmd_token_scanner.c
/* Generated by re2c 4.4 on Thu Sep 17 06:04:38 2026 */
/**

	libMultiMarkdown7 -- Lightweight markup processor to produce HTML, LaTeX, and more.

	@file mmd_token_scanner.c

	@brief


	@author	Fletcher T. Penney
	@bug

**/

/*

	MIT License

	Copyright (c) 2024-2026 Fletcher T. Penney

	Permission is hereby granted, free of charge, to any person obtaining a copy
	of this software and associated documentation files (the "Software"), to deal
	in the Software without restriction, including without limitation the rights
	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
	copies of the Software, and to permit persons to whom the Software is
	furnished to do so, subject to the following conditions:

	The above copyright notice and this permission notice shall be included in all
	copies or substantial portions of the Software.

	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
	SOFTWARE.

*/


#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "libMultiMarkdown7.h"

#include "char.h"
#include "read_ctx.h"
#include "mmd_node.h"
#include "mmd_scanner.h"
#include "mmd_token_scanner.h"
#include "mmd_span_parser.h"
#include "read_ctx.h"
#include "mmd_utilities.h"

#pragma GCC diagnostic push
#pragma GCC diagnostic ignored "-Wunused-variable"
#pragma GCC diagnostic ignored "-Wunused-but-set-variable"

#ifndef __has_warning
	#define __has_warning(x) 0
#endif

#if !__has_warning("-Wmaybe-uninitialized")
	#pragma GCC diagnostic ignored "-Wmaybe-uninitialized"
#endif

#pragma GCC diagnostic ignored "-Wunused-parameter"

#define ret s->c_start = t1; return

/// Scan text for MultiMarkdown tokens
int mmd_token_scan(Scanner * s, uint32_t options) {
	const char * t1;
	// Autogenerated tag variables used by the lexer to track tag values.
	const char * yyt1;
	const char * yyt10;
	const char * yyt11;
	const char * yyt2;
	const char * yyt3;
	const char * yyt4;
	const char * yyt5;
	const char * yyt6;
	const char * yyt7;
	const char * yyt8;
	const char * yyt9;


scan:

	if (s->cur >= s->stop) {
		s->c_start = s->text;
		s->start = s->cur;
		return TOKEN_EOF;
	}

	s->start = s->cur;


	{
		YYCTYPE yych;
		unsigned int yyaccept = 0;
		yych = *YYCURSOR;

		switch (yych) {
			case 0x00:
				yyt1 = YYCURSOR;
				goto yy1;

			case '\t':
				yyt1 = YYCURSOR;
				goto yy4;

			case '\n':
				yyt1 = YYCURSOR;
				goto yy6;

			case '\r':
				yyt1 = YYCURSOR;
				goto yy8;

			case ' ':
				yyt1 = YYCURSOR;
				goto yy9;

			case '!':
				goto yy10;

			case '"':
				goto yy11;

			case '#':
				yyt1 = YYCURSOR;
				goto yy12;

			case '$':
				goto yy14;

			case '%':
				goto yy16;

			case '&':
				yyt1 = YYCURSOR;
				goto yy18;

			case '\'':
				goto yy20;

			case '(':
				goto yy22;

			case ')':
				goto yy23;

			case '*':
				goto yy24;

			case '+':
				goto yy25;

			case '-':
				goto yy27;

			case '.':
				goto yy29;

			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
				yyt1 = YYCURSOR;
				goto yy30;

			case ':':
				goto yy31;

			case '<':
				goto yy32;

			case '=':
				goto yy34;

			case '>':
				goto yy35;

			case '[':
				yyt1 = YYCURSOR;
				goto yy36;

			case '\\':
				yyt1 = YYCURSOR;
				goto yy38;

			case ']':
				goto yy39;

			case '^':
				goto yy40;

			case '_':
				goto yy41;

			case '`':
				yyt1 = YYCURSOR;
				goto yy42;

			case '{':
				goto yy44;

			case '|':
				yyt1 = YYCURSOR;
				goto yy46;

			case '}':
				goto yy48;

			case '~':
				goto yy49;

			case 0xEF:
				goto yy51;

			default:
				goto yy2;
		}

yy1:
		++YYCURSOR;
		t1 = yyt1;
		{
			ret TOKEN_EOF;
		}
yy2:
		++YYCURSOR;
yy3: {
			goto scan;
		}
yy4:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy1;

			case '\t':
				goto yy4;

			case '\n':
				goto yy6;

			case '\r':
				goto yy8;

			case ' ':
				goto yy52;

			default:
				goto yy5;
		}

yy5:
		t1 = yyt1;
		{
			ret TOKEN_TEXT_WHITESPACE;
		}
yy6:
		++YYCURSOR;
yy7:
		t1 = yyt1;
		{
			ret TOKEN_NL;
		}
yy8:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\n':
				goto yy6;

			default:
				goto yy7;
		}

yy9:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case 0x00:
				goto yy1;

			case '\t':
				goto yy53;

			case '\n':
				goto yy6;

			case '\r':
				goto yy8;

			case ' ':
				goto yy55;

			case '\\':
				goto yy56;

			default:
				goto yy3;
		}

yy10:
		yych = *++YYCURSOR;

		switch (yych) {
			case '[':
				goto yy58;

			default:
				goto yy3;
		}

yy11:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_QUOTE_DOUBLE;
		}
yy12:
		yych = *++YYCURSOR;

		switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy61;

			default:
				goto yy60;
		}

yy13:
		t1 = yyt1;
		{
			ret TOKEN_HASH;
		}
yy14:
		yych = *++YYCURSOR;

		switch (yych) {
			case '$':
				goto yy63;

			default:
				goto yy15;
		}

yy15:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_MATH_DOLLAR_SINGLE;
		}
yy16:
		++YYCURSOR;
yy17:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_SPECIAL_CHARACTER;
		}
yy18:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '#':
				goto yy64;

			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy65;

			case 'a':
				goto yy67;

			default:
				goto yy19;
		}

yy19:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_AMPERSAND;
		}
yy20:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\'':
				goto yy68;

			default:
				goto yy21;
		}

yy21:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_QUOTE_SINGLE;
		}
yy22:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_PAREN_LEFT;
		}
yy23:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_PAREN_RIGHT;
		}
yy24:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_STAR;
		}
yy25:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '+':
				goto yy69;

			default:
				goto yy26;
		}

yy26:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_PLUS;
		}
yy27:
		yych = *++YYCURSOR;

		switch (yych) {
			case '-':
				goto yy70;

			default:
				goto yy28;
		}

yy28:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_MINUS;
		}
yy29:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case ' ':
				goto yy72;

			case '.':
				goto yy73;

			default:
				goto yy3;
		}

yy30:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '-':
				goto yy74;

			case '.':
				goto yy75;

			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
				goto yy76;

			default:
				goto yy3;
		}

yy31:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_COLON;
		}
yy32:
		yyaccept = 3;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '<':
				goto yy77;

			default:
				goto yy33;
		}

yy33:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_ANGLE_LEFT;
		}
yy34:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '=':
				goto yy78;

			default:
				goto yy3;
		}

yy35:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_ANGLE_RIGHT;
		}
yy36:
		yyaccept = 4;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '\t':
			case ' ':
			case 0xA0:
				goto yy79;

			case 'N':
			case 'n':
				goto yy80;

			case ']':
				goto yy81;

			default:
				goto yy37;
		}

yy37:
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_BRACKET_LEFT;
		}
yy38:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\n':
				goto yy82;

			case '\r':
				goto yy84;

			case ' ':
				goto yy85;

			case '!':
			case '"':
			case '#':
			case '$':
			case '%':
			case '&':
			case '\'':
			case '(':
			case ')':
			case '*':
			case '+':
			case ',':
			case '-':
			case '.':
			case '/':
			case ':':
			case ';':
			case '<':
			case '=':
			case '>':
			case '?':
			case '@':
			case '[':
			case ']':
			case '^':
			case '_':
			case '`':
			case '{':
			case '|':
			case '}':
			case '~':
				goto yy86;

			case '\\':
				goto yy88;

			default:
				goto yy17;
		}

yy39:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_BRACKET_RIGHT;
		}
yy40:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret (options & MMD_OPTION_COMPATIBILITY) ? TOKEN_TEXT : TOKEN_SUPERSCRIPT;
		}
yy41:
		++YYCURSOR;
		t1 = YYCURSOR;
		t1 -= 1;
		{
			ret TOKEN_UL;
		}
yy42:
		yych = *++YYCURSOR;
